#  Copyright (C) 2008 Sun Microsystems
# 
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; version 2 of the License.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

noinst_LTLIBRARIES = 	libfunctions.la

libfunctions_la_SOURCES = abs.cc \
			  acos.cc \
			  asin.cc \
			  atan.cc \
			  additive_op.cc \
			  ceiling.cc \
			  connection_id.cc \
			  cos.cc \
			  decimal_typecast.cc \
			  divide.cc \
			  exp.cc \
			  floor.cc \
			  func.cc \
                          int.cc \
                          int_divide.cc \
                          int_val.cc \
			  length.cc \
			  ln.cc \
			  log.cc \
			  min_max.cc \
			  minus.cc \
			  mod.cc \
			  multiply.cc \
			  neg.cc \
			  num1.cc \
                          numhybrid.cc \
                          num_op.cc \
                          plus.cc \
                          pow.cc \
			  rand.cc \
			  real.cc \
			  round.cc \
			  sign.cc \
			  signed.cc \
			  sin.cc \
			  sqrt.cc \
			  tan.cc \
			  unsigned.cc

noinst_HEADERS = abs.h \
		 acos.h \
		 asin.h \
		 atan.h \
		 additive_op.h \
		 ceiling.h \
		 connection_id.h \
		 cos.h \
		 dec.h \
		 decimal_typecast.h \
		 divide.h \
		 exp.h \
		 floor.h \
		 func.h \
                 int.h \
                 int_divide.h \
                 int_val.h \
		 length.h \
		 ln.h \
		 log.h \
		 min_max.h \
		 minus.h \
		 mod.h \
		 multiply.h \
		 neg.h \
		 num1.h \
                 numhybrid.h \
                 num_op.h \
                 plus.h \
                 pow.h \
		 real.h \
		 round.h \
		 round.h \
		 sign.h \
		 signed.h \
		 sin.h \
		 sqrt.h \
		 tan.h \
		 unsigned.h
	

DEFS= -DDRIZZLE_SERVER @DEFS@
