#  Copyright (C) 2008 Sun Microsystems
# 
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; version 2 of the License.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

noinst_LTLIBRARIES = 	libfunctions.la

libfunctions_la_SOURCES = abs.cc \
			  acos.cc \
			  ascii.cc \
			  asin.cc \
			  atan.cc \
			  additive_op.cc \
			  benchmark.cc \
			  bit.cc \
			  bit_count.cc \
			  char_length.cc \
			  ceiling.cc \
			  connection_id.cc \
			  coercibility.cc \
			  cos.cc \
			  decimal_typecast.cc \
			  divide.cc \
			  exp.cc \
			  get_user_var.cc \
			  get_variable.cc \
			  field.cc \
			  find_in_set.cc \
			  floor.cc \
			  found_rows.cc \
			  func.cc \
			  get_system_var.cc \
			  get_variable.cc \
                          int.cc \
                          integer.cc \
                          int_divide.cc \
                          int_val.cc \
			  last_insert.cc \
			  length.cc \
			  ln.cc \
			  locate.cc \
			  lock.cc \
			  log.cc \
			  master_pos_wait.cc \
			  min_max.cc \
			  minus.cc \
			  mod.cc \
			  multiply.cc \
			  neg.cc \
			  num1.cc \
                          numhybrid.cc \
                          num_op.cc \
                          ord.cc \
                          plus.cc \
                          pow.cc \
			  rand.cc \
			  real.cc \
			  round.cc \
			  row_count.cc \
			  shift.cc \
			  sign.cc \
			  signed.cc \
			  sin.cc \
			  sqrt.cc \
			  tan.cc \
			  units.cc \
			  unsigned.cc

noinst_HEADERS = abs.h \
		 acos.h \
		 ascii.h \
		 asin.h \
		 atan.h \
		 additive_op.h \
		 benchmark.h \
		 bit.h \
		 bit_count.h \
		 bit_length.h \
		 ceiling.h \
		 char_length.h \
		 coercibility.h \
		 connection_id.h \
		 cos.h \
		 dec.h \
		 decimal_typecast.h \
		 divide.h \
		 exp.h \
		 field.h \
		 find_in_set.h \
		 floor.h \
		 found_rows.h \
		 func.h \
		 get_system_var.h \
		 get_user_var.h \
                 int.h \
                 integer.h \
                 int_divide.h \
                 int_val.h \
		 last_insert.h \
		 length.h \
		 ln.h \
		 locate.h \
		 lock.h \
		 log.h \
		 master_pos_wait.h \
		 min_max.h \
		 minus.h \
		 mod.h \
		 multiply.h \
		 neg.h \
		 num1.h \
                 numhybrid.h \
                 num_op.h \
                 ord.h \
                 plus.h \
                 pow.h \
		 real.h \
		 rollup_const.h \
		 round.h \
		 row_count.h \
		 sign.h \
		 signed.h \
		 sin.h \
		 sqrt.h \
		 tan.h \
		 unsigned.h
	

DEFS= -DDRIZZLE_SERVER @DEFS@
